Updated readme and releases